refactor: change validation Pattern for player name